# WickedEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
Editor/: Editor.cpp  Editor_Windows.vcxproj  GeneralWindow.cpp  ModelImporter_GLTF.cpp  ModelImporter_OBJ.cpp  config.ini  main_Windows.cpp
Example_ImGui/: CMakeLists.txt
Example_ImGui_Docking/: CMakeLists.txt
Template_Linux/: main.cpp
Template_Windows/: CMakeLists.txt
WickedEngine/: CMakeLists.txt  WickedEngine_Windows.vcxproj  wiApplication.cpp  wiArguments.cpp  wiAudio.cpp  wiBacklog.cpp  wiBacklog.h  wiBacklog_BindLua.cpp  wiEmittedParticle.cpp  wiFont.cpp  wiGPUBVH.cpp  wiGPUSortLib.cpp  wiGUI.cpp  wiGraphicsDevice_DX12.cpp  wiGraphicsDevice_Vulkan.cpp  wiHairParticle.cpp  wiHelper.cpp  wiImage.cpp  wiInitializer.cpp  wiInput.cpp  wiJobSystem.cpp  wiJobSystem.h  wiLocalization.cpp  wiLua.cpp  wiNetwork_Linux.cpp  wiNetwork_Windows.cpp  wiOcean.cpp  wiPhysics_Bullet.cpp  wiProfiler.cpp  wiRenderPath3D_PathTracing.cpp  wiRenderer.cpp  wiResourceManager.cpp  wiSDLInput.cpp  wiScene.cpp  wiScene_Components.cpp  wiScene_Serializers.cpp  wiShaderCompiler.cpp  wiTextureHelper.cpp  wiVideo.cpp
WickedEngine/BULLET/: CMakeLists.txt
WickedEngine/BULLET/BulletSoftBody/: btDefaultSoftBodySolver.cpp  btSoftBody.cpp
gamerpc/: CMakeLists.txt  dummy.cpp
gamerpc/plugin/: CMakeLists.txt  codegen_config_protobuf.h  config.h  config_protobuf.h  generator_helpers.h  main.cpp  proto_parser_helper.cpp
gamerpc/proto/: gamerpc.proto
(+1 files in other folders)
